--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "make-runnable": "^1.3.6",
     "mysql": "^2.17.1",
     "path": "^0.12.7"
   },
   "scripts": {
     "migrate:users:up": "node ./server/migrations/users.js up",
     "migrate:users:down": "node ./server/migrations/users.js down",
+    "migrate:users:seed": "node ./server/migrations/users.js seed",
     "start:dev": "NODE_ENV=development node server",
     "start": "NODE_ENV=production node server"
   },
