--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "path": "^0.12.7"
   },
   "scripts": {
-    "migrate:users:up": "node ./server/migrations/users.js up",
-    "migrate:users:down": "node ./server/migrations/users.js down",
-    "migrate:users:seed": "node ./server/migrations/users.js seed",
+    "migrate:up": "node server/migrations.js up",
+    "migrate:down": "node server/migrations.js down",
+    "migrate:seed": "node server/migrations.js seed",
     "start:dev": "NODE_ENV=development node server",
     "start": "NODE_ENV=production node server"
   },
