--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "migrate:seed": "node server/migrations.js seed",
     "migrate:setup": "node server/migrations.js setup",
     "start:dev": "NODE_ENV=development node server",
-    "start": "NODE_ENV=production node server",
-    "postinstall": "npm run migrate:setup"
+    "start": "NODE_ENV=production node server"
   },
   "author": "Alan Eicker",
   "license": "MIT"
