--- a/env/.env.development
+++ b/env/.env.development
@@ -1,8 +1,8 @@
 PORT = 9000
-IS_DEV=true
 
 DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=root
 DB_CONNECTION_LIMIT=20
 DB=users
+SOCKET_PATH=/Applications/MAMP/tmp/mysql/mysql.sock
