--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.17.1",
     "make-runnable": "^1.3.6",
     "mysql": "^2.17.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "util": "^0.12.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
