--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Alan Eicker",
   "license": "MIT",
   "scripts": {
+    "lint": "eslint . --config=.eslintrc.json",
     "migrate:up": "node server/migrations.js up",
     "migrate:down": "node server/migrations.js down",
     "migrate:seed": "node server/migrations.js seed",
@@ -24,6 +25,7 @@
     "util": "^0.12.1"
   },
   "devDependencies": {
+    "eslint": "^6.1.0",
     "nodemon": "^1.19.1"
   }
 }
